update template module